# GilgameshEngine

./: CMakeLists.txt
Legacy/: RGUStepper.cpp  cpuinfo_archlinux  mme.cpp
include/: AVX_functions.h  getValue.h  stateIndices.h  stateIndices8bit.h  stateVector.h  stateVector_backformat.h  testStates.h  valueMatrix8bit.h  valueMatrix8bit_backformat.h  valueMatrix8bit_dense_3of4_backformat.h  valueMatrix8bit_dense_full.h  valueMatrix_dense_3of4_backformat.h  valueMatrix_dense_full.h
src/: CMakeLists.txt  Component_speedTest.cpp  getValue_speedTest.cpp  testStates.cpp
src/getValue/: Indices8bit_denseFull8bit_noAVX.cpp  Indices8bit_denseFull8bit_noAVX_noForLoop.cpp  constant.cpp  readme.md  vector16bit_dense3of416bit_AVX_mask.cpp  vector16bit_dense3quarter16bit_AVX_mask.cpp  vector16bit_dense3quarter16bit_AVX_mask_noForLoop.cpp  vector16bit_denseFull16bit_AVX.cpp  vector16bit_dense_3of4_16bit_AVX_mask.cpp  vector8bit_denseFull8bit_AVX.cpp  vector8bit_denseFull8bit_noAVX.cpp  vector8bit_denseFull8bit_noAVX_noForLoop.cpp  vector8bit_denseFull8bit_noAVX_noForLoop_cppTemplates.cpp
test/: CMakeLists.txt  MatrixTests.cpp  getValueTest.cpp  getValue_speedTest.cpp  testMatrixFormatCast.cpp
